# chaoshen-toolbox

./: .gitignore  Jenkinsfile  README.md  debug-install.sh  jenkins.sh  make.sh  requirements.txt  rsync-code.sh  setup.cfg
.github/workflows/: ci-cd.yml  publish-to-test-pypi.yml
chaoshen_toolbox/: __init__.py
chaoshen_toolbox/config/: base.py  support.py
chaoshen_toolbox/model/: network.py
chaoshen_toolbox/scripts/: config.py
chaoshen_toolbox/scripts/docker/: add_sudo_command_to_sudoers.py  run_rm.py
chaoshen_toolbox/scripts/network/: config_static_ip.py
chaoshen_toolbox/scripts/openstack/: cs_openstack_log_delete_req.py  log_delete_req.py
chaoshen_toolbox/scripts/windows/: add_md_title_number.py  find_crlf_files.py
chaoshen_toolbox/utils/: common.py  file.py  linux.py  windows.py
python-demo/device/: zn600.py
python-demo/system/eventlet_/wait-event/: readme.md  wait-demo.py
python-demo/system/eventlet_/wait-event/cinder/: db_base.py  message_api.py  message_field.py  send-event.py
python-demo/system/eventlet_/wait-event/nova/: objects.py  wait-event-2.py  wait-event-3.py
tools/: cs-config-self-network.sh  cs-docker-tailf-container-log  cs-docker-tailf-container-log.sh  cs-filter-comment.sh  cs-git-push-use-token.sh  cs-hello  cs-hello.sh  cs-permit-root-ssh.sh  cs-task-watcher.sh  hello
tools/windows/: Get-NetIpConfigration.ps1
user_config/: network.yaml
