[metadata]
name = chaoshen-toolbox
big_number_version = 0
small_number_version = 0
conda_venv_name = chaoshen
summary = Kolla OpenStack Deployment
description_file = README.md
author = m986883511
author_email = 986883511@qq.com
home_page = https://github.com/m986883511/chaoshen-toolbox
python_requires = >=3.8
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    chaoshen_toolbox
data_files =
    share/chaoshen-toolbox/releasenotes = releasenotes/*
    share/chaoshen-toolbox/tools = tools/*
    share/chaoshen-toolbox = setup.cfg
    share/chaoshen-toolbox/default_config = user_config/*
scripts =
    tools/cs-hello.sh
    tools/cs-docker-tailf-container-log.sh
    tools/cs-filter-comment.sh
    tools/cs-git-push-use-token.sh
    tools/cs-task-watcher.sh
    tools/cs-permit-root-ssh.sh


[entry_points]
console_scripts =
    cs-openstack-log-delete-req = chaoshen_toolbox.scripts.openstack.log_delete_req:main

    cs-docker-add-sudo-command-to-sudoers = chaoshen_toolbox.scripts.docker.add_sudo_command_to_sudoers:main
    cs-docker-run-rm = chaoshen_toolbox.scripts.docker.run_rm:main

    cs-network-config-static-ip = chaoshen_toolbox.scripts.network.config_static_ip:main
